[Mouse KCM] Fix writing selected profile value

Summary:
Wrote the default value resulting in no change at all.

BUG: 394787

Test Plan: Manually

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D13270